<resources>
    <string name="app_name">PureLuv</string>
    <string name="made_in">Made In India</string>

    <string name="Login_Signup_Startup1">Login/SignUp to Join</string>
    <string name="Login_Signup_Startup2">Get Matched According to Your Wish</string>

    <string name="first_slide_title">Worlds First Real Blind Dating App</string>
    <string name="second_slide_title">Now no swipe right/left Because Love is Blind</string>
    <string name="third_slide_title">Zero fake accounts guaranteed </string>
    <string name="fourth_slide_title">What if you are not for each other</string>

    <string name="first_slide_desc">First Real Blind Dating App where you meet with people according to your wish and make connection with them</string>
    <string name="second_slide_desc">Swiping is a old method\nHere we\'ll match you with your date according to your requirments</string>
    <string name="third_slide_desc">Have a 20 minute video call (through inbuilt feature) before everything, to know whether person is real or not</string>
    <string name="fourth_slide_desc">If you think He/She is not right match for you, You can cancel the furthur things just after video call</string>


    <string name="start_text_advice">By continuing on this application you agree to our Terms of Use and Privacy Policy</string>
    <string name="start">start</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="what_do_we_do"> What Do We Do? </string>
    <string name="forget_password">Forget Password</string>
    <string name="do_not_have_account">Do not have account ?</string>


    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="have_an_account">Have An Account</string>
    <string name="verification">Verifcation</string>
    <string name="code">CO\nDE</string>
    <string name="Otp_Description">Enter the One Time Password Sent On</string>
    <string name="verify">Verify</string>
    <string name="forgetpass_text">Provide your account\'s Phone number for which you want to reset the Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="verified_text">Your Identity has been verified \nSet your new Password</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_updated">Password Updated</string>
    <string name="pass_updated_text">Your password has been updated</string>
    <string name="create_account">Create \n Account</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_your_date_of_birth">Select your Date of Birth</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="previous">Previous</string>
    <string name="bio">Bio</string>
    <string name="save">Save</string>
    <string name="please_wait_statement">*Please Wait. You will be notified when you will be matched</string>
    <string name="not_matched_statement">Currently you are not matched with anyone</string>
    <string name="picture_desc">*Profile Picture will be shown only to them with whom you \n will match</string>
    <string name="city_desc">*City will be selected automatically</string>
    <string name="bio_desc">*Bio will be shown only to them with whom you will match</string>


    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="age">
        <item>18–21</item>
        <item>22–25</item>
        <item>26–29</item>
        <item>30–35</item>
        <item>36–42</item>
        <item>43–50</item>
        <item>50+</item>
    </string-array>
    <string-array name="relation">
        <item>Date</item>
        <item>Friendship</item>
    </string-array>
    <string-array name="location">
        <item>Your City</item>
        <item>Anywhere</item>
    </string-array>

</resources>