<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.forgetPasswordSuccessMsg"
    android:padding="30dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_btn"
        android:contentDescription="@string/back"
        android:onClick="back"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_extrabold"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="-100dp"
            android:textAllCaps="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/verified"
            android:contentDescription="@string/verified_text"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_updated_text"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli"
            android:textAlignment="center"
            android:gravity="center"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="callLoginScreen"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:background="@drawable/layoutbackground"/>

    </LinearLayout>


</LinearLayout>