<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.setNewPassword"
    android:padding="30dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        

        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/passwordsetup_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_credentials"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_extrabold"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verified_text"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="40dp"
            android:id="@+id/new_pass"
            app:boxBackgroundColor="@color/lightWhite"
            android:hint="@string/new_password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/lightWhite"
            android:hint="@string/confirm_password"
            android:id="@+id/new_pass_2"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layoutbackground"
            android:layout_marginTop="30dp"
            android:text="@string/confirm"
            android:onClick="updatePassword"
            android:textColor="@color/white"
            android:fontFamily="@font/muli"/>

    </LinearLayout>

</ScrollView>