<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Common.LoginSignup.Signup"
    android:padding="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/image8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:onClick="back"
            android:contentDescription="@string/back"
            android:src="@drawable/back_btn" />

        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/layoutbackground"
            android:fontFamily="@font/muli_light_italic"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:background="@drawable/layoutbackground">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fullname"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:hint="@string/full_name"
                android:textColorHint="@color/white"
                app:boxCornerRadiusTopEnd="40dp"
                app:boxCornerRadiusTopStart="40dp"
                app:endIconMode="clear_text"
                app:boxStrokeColor="@color/white"
                app:endIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:hint="@string/username"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:endIconTint="@color/white"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:endIconTint="@color/white"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                app:boxStrokeColor="@color/white"
                app:endIconTint="@color/white"
                android:layout_marginBottom="5dp"
                app:boxCornerRadiusBottomEnd="40dp"
                app:boxCornerRadiusBottomStart="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/signup_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/btn_background"
            android:text="@string/next"
            android:elevation="10dp"
            android:onClick="callNextSignupScreen"
            android:layout_gravity="center"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/signup_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="#00000000"
            android:text="@string/have_an_account"
            android:textColor="@color/black"
            android:onClick="callLoginScreenSignup"/>

    </LinearLayout>


</ScrollView>