<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Common.LoginSignup.Login"
    android:padding="10dp"
    android:background="@drawable/image2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="16dp">

        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:contentDescription="@string/back"
            android:onClick="back"
            android:src="@drawable/back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/layoutbackground"
            android:fontFamily="@font/muli_light_italic"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/layoutbackground"
            android:orientation="vertical">


            <com.hbb20.CountryCodePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/country_code_picker"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="true"
                app:ccp_showFullName="true"
                app:ccp_contentColor="@color/white"
                app:ccpDialog_textColor="@color/black"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_phone_number"
                android:layout_below="@id/country_code_picker"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:hint="@string/phone_number"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_phone_number_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:textColor="@color/white"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_password"
                android:layout_below="@id/login_phone_number"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:hint="@string/enter_password"
                android:textColorHint="@color/white"
                app:endIconMode="password_toggle"
                app:passwordToggleEnabled="true"
                app:boxStrokeColor="@color/white"
                app:endIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/relativelayout"
                android:layout_below="@+id/login_password">

                <CheckBox
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:id="@+id/rememberme_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:buttonTint="@color/white"
                    android:text="@string/remember_me"
                    android:textColor="@color/white" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    android:background="#00000000"
                    android:text="@string/forget_password"
                    android:onClick="callforgetpassword"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/relativelayout"
                android:background="@drawable/btn_background"
                android:text="@string/login"
                android:elevation="10dp"
                android:onClick="userLogin"
                android:id="@+id/login_button"
                android:textColor="@color/black" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_button"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:background="#00000000"
                android:gravity="center"
                android:onClick="callSignupScreenLogin"
                android:text="@string/do_not_have_account"
                android:textAlignment="center"
                android:textColor="@color/white" />


        </RelativeLayout>
    </LinearLayout>

</ScrollView>